packages/kyvernoPolicies/chart/tests/mpol/add-default-capability-drop-cel/chainsaw-test/dep-bare-mutated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bare-deployment
spec:
  template:
    spec:
      containers:
        - name: test
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            capabilities:
              drop:
                - ALL
