packages/kyvernoPolicies/chart/tests/mpol/add-default-capability-drop-cel/chainsaw-test/dep-bare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bare-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: test
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          command: ["true"]
