packages/kyvernoPolicies/chart/tests/mpol/add-default-capability-drop-cel/chainsaw-test/pod-all.yaml
apiVersion: v1
kind: Pod
metadata:
  name: all-pod
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
      command: ["true"]
      securityContext:
        capabilities:
          drop:
            - ALL
            - NET_RAW
