packages/kyvernoPolicies/chart/tests/mpol/add-default-capability-drop-cel/chainsaw-test/pod-bare-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bare-pod
spec:
  containers:
    - name: test
      securityContext:
        capabilities:
          drop:
            - ALL
